--- a/.config
+++ b/.config
@@ -5016,7 +5016,7 @@ CONFIG_PACKAGE_luci-app-wrtbwmon=y
 # CONFIG_PACKAGE_luci-theme-argon-light-mod is not set
 # CONFIG_PACKAGE_luci-theme-argon-mc is not set
 CONFIG_PACKAGE_luci-theme-argon-mod=y
-CONFIG_PACKAGE_luci-theme-argon-new=y
+# CONFIG_PACKAGE_luci-theme-argon-new=
 # CONFIG_PACKAGE_luci-theme-argonv2 is not set
 CONFIG_PACKAGE_luci-theme-argonv3=y
 # CONFIG_PACKAGE_luci-theme-atmaterial is not set
