--- a/7500.config
+++ b/7500.config
@@ -4755,7 +4755,7 @@ CONFIG_PACKAGE_luci-mod-admin-full=y
 #
 # 3. Applications
 #
-#CONFIG_PACKAGE_luci-app-accesscontrol-plus=y
+CONFIG_PACKAGE_luci-app-accesscontrol-plus=y
 # CONFIG_PACKAGE_luci-app-acme is not set
 # CONFIG_PACKAGE_luci-app-adblock is not set
 # CONFIG_PACKAGE_luci-app-adbyby-fix is not set
